--- a/app/css/home/homebanner.less
+++ b/app/css/home/homebanner.less
@@ -22,10 +22,11 @@
   width: 200px;
   height: 100%;
   border-radius: 50%;
+  margin: 15px;
 }
 
 .home-banner-desc {
-  height: 60%;
+  height: 100%;
   margin-top: 10px;
   text-align: center;
   color: rgb(255, 255, 255);
